tests/baselines/reference/asiPublicPrivateProtected(alwaysstrict=true).errors.txt
asiPublicPrivateProtected.ts(1,1): error TS1212: Identifier expected. 'public' is a reserved word in strict mode.
asiPublicPrivateProtected.ts(1,1): error TS2304: Cannot find name 'public'.
asiPublicPrivateProtected.ts(12,1): error TS1212: Identifier expected. 'private' is a reserved word in strict mode.
asiPublicPrivateProtected.ts(12,1): error TS2304: Cannot find name 'private'.
asiPublicPrivateProtected.ts(23,1): error TS1212: Identifier expected. 'protected' is a reserved word in strict mode.
asiPublicPrivateProtected.ts(23,1): error TS2304: Cannot find name 'protected'.


==== asiPublicPrivateProtected.ts (6 errors) ====
    public
    ~~~~~~
!!! error TS1212: Identifier expected. 'public' is a reserved word in strict mode.
    ~~~~~~
!!! error TS2304: Cannot find name 'public'.
    class NonPublicClass {
        public s() {
        }
    }
    
    class NonPublicClass2 {
        public
        private nonPublicFunction() {
        }
    }
    private
    ~~~~~~~
!!! error TS1212: Identifier expected. 'private' is a reserved word in strict mode.
    ~~~~~~~
!!! error TS2304: Cannot find name 'private'.
    class NonPrivateClass {
        private s() {
        }
    }
    
    class NonPrivateClass2 {
        private
        public nonPrivateFunction() {
        }
    }
    protected
    ~~~~~~~~~
!!! error TS1212: Identifier expected. 'protected' is a reserved word in strict mode.
    ~~~~~~~~~
!!! error TS2304: Cannot find name 'protected'.
    class NonProtectedClass {
      protected s() {
      }
    }
    
    class NonProtectedClass2 {
        protected
        public nonProtectedFunction() {
        }
    }
    
    class ClassWithThreeMembers {
        public
        private
        protected
    }
    